# excalidraw-brute-export-cli

./: .changeguard-ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  README.md  README.md.jinja2  package-lock.json  package.json
.github/: README.md.jinja2  README.remotified.md  demo.tape  license-header.md
.github/workflows/: build-and-test.yml
examples/: local-docker_example.sh  remote-docker_example-noautorun.sh  simple-local-docker_example.sh  simple-remote-docker_example-noautorun.sh  simple.excalidraw  simple.sh  simple_example.sh  simple_example.sh.jinja2
scripts/: deploy-to-npm.sh  format.sh  generate-animation.sh  generate-examples.sh  generate-readme.sh  generate.sh  pre.sh  precommit.sh  pyproject.toml  run-all-examples.sh  run-excalidraw.sh  run-ood-generate-animation.sh  run-ood-smoke-test.sh
scripts/utilities/: act.sh  bump-n-tag-npm.sh  changeguard.sh  deploy-to-ghr.sh  deploy-to-npm.sh  ensure-node-version.sh  ensure-pyenv.sh  ensure-reqs2.sh  pin-extra-reqs2.py  pin-extra-reqs2.sh
src/: main.js
